@@ -1,4 +1,4 @@
-17-12-18
+20-12-18
 
 The system now uses Import Templates. This is a *major* update which accounts for the gap in deployments.
 
@@ -7,6 +7,12 @@ Can execute multi-line 'az_execute' regions
 If the az_Execute range is also called 'az_PreExecute' then the execution will happen every time.
 
 Functions inserted - BESTVALUEMATCH, BESTNAMEMATCH, BESTNAMEVALUEMATCH - defined in Reference Manual
+
+Will allow bracketed 'Where' statements to pass to the NameFilterFunctions if they refer to attributes
+
+Allows offset top headings, more specifically when they're shifted right
+
+Composite attribute syntax, various bits of code tidying
 
 27-11-18-2
 
